# FalconMOT

./: .gitignore  CITATION.cff  LICENSE  README.md  count_gflops.py  pyproject.toml  requirements.txt  setup.py
configs/: visdrone_coco_det.json  visdrone_val.json
falconmot/: __init__.py  opts.py
falconmot/cfg/: __init__.py  args.py  visdrone.json  visdrone_coco.json  visdrone_coco_det.json  visdrone_local.json
falconmot/data/: __init__.py  augment.py  dataset.py  factory.py
falconmot/datasets/: augment.py  dataset_factory.py
falconmot/engine/: __init__.py  base_trainer.py  factory.py  mot.py  mot_trainer.py  stage.py  trainer.py
falconmot/nn/: __init__.py  parallel.py
falconmot/optim/: __init__.py  optimizer.py  scheduler.py
falconmot/tracker/: ARCHITECTURE.md  __init__.py  appearance_motion.py  association.py  base.py  basetrack.py  class_remap.py  config.py  falcon_tracker.py  gmc.py  matching.py  motion.py  multitracker.py  (+2 more)
scripts/: _paths.py  evaluate.py  evaluate_det.py  export_onnx.py  gen_dataset_visdrone.py  gen_dataset_visdrone_coco.py  infer_onnx.py  inference.py  inference_track.py  track.py  track_4cls.py  track_5cls.py  track_ECDet.py  train.py  train_stage1_det.sh  visdrone2coco_4cls_competition_mot.py  visdrone2coco_5cls_benchmark_mot.py  visdrone2coco_7cls_det.py  visdrone2coco_7cls_mot.py
tools/: _paths.py  benchmark_cpu.py  count_gflops.py  count_model.py  detect.py  eval_det.py  eval_det_visdrone.py  eval_mot_4cls.py  eval_mot_5cls.py  eval_uavdt_mot.py  export_onnx.py  test_augment.py  track.py  train.py  visualize_augmentation.py
(+63 files in other folders)
