[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "falconmot"
version = "0.1.0"
description = "FalconMOT — UAV edge multi-object detection & tracking (FalconJDE + clean online tracker)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["falconmot*"]
